--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
         <h1 class="title">
             Rock, Paper & Scissors
         </h1>
+        
+        <!-- Score Section -->
+        <div class="score-board">
+            <div class="score">
+                <h3>Player Score: <span id="player-score">0</span></h3>
+            </div>
+            <div class="score">
+                <h3>Ties: <span id="tie-score">0</span></h3>
+            </div>
+            <div class="score">
+                <h3>Computer Score: <span id="computer-score">0</span></h3>
+            </div>
+        </div>
+
         <div class="game">
             <div class="player1">
                 <h4>Player</h4>
@@ -24,6 +38,7 @@
                 <h3 class="c-choice"></h3>
             </div>
         </div>
+
         <h1>Choose:</h1>
         <div class="choices">
             <div class="img" id="rock">
