--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!-- Score Section -->
-        <div class="score-board">
-            <div class="score">
-                <h3>Player Score: <span id="player-score">0</span></h3>
+<!-- Score Section -->  <h3>Player Score: <span id="player-score">0</span></h3>
             </div>
             <div class="score">
                 <h3>Ties: <span id="tie-score">0</span></h3>
