--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-       <div class="result">Start!</div>
-            <div class="computer">
-                <h4>Computer</h4>
-                <img src="./images/rock.png" alt="rock">
+"./images/rock.png" alt="rock">
                 <h3 class="c-choice"></h3>
             </div>
         </div>
